Fixed code to work with new directory arrangement

--- a/gui/html/wavelist.html
+++ b/gui/html/wavelist.html
@@ -245,7 +245,7 @@
 				right:7px;
 				z-index:7;
 				padding-left:20px;
-				background:url('cover.png') repeat-y 0px 0px;
+				background:url('img/cover.png') repeat-y 0px 0px;
 			}
 
 			.noselect {
@@ -297,12 +297,12 @@
 					<table> <tr>
 						<td class="participants">
 						<div>
-							<img class ="online" src="something28.jpg" alt="Someone"/>
-							<img class ="online" src="something28.jpg" alt="Someone"/>
-							<img class ="online" src="something28.jpg" alt="Someone"/>
-							<img class ="online" src="something28.jpg" alt="Someone"/>
-							<img class ="online" src="something28.jpg" alt="Someone"/>
-							<img class ="online" src="something28.jpg" alt="Someone"/>
+							<img class ="online" src="img/something28.jpg" alt="Someone"/>
+							<img class ="online" src="img/something28.jpg" alt="Someone"/>
+							<img class ="online" src="img/something28.jpg" alt="Someone"/>
+							<img class ="online" src="img/something28.jpg" alt="Someone"/>
+							<img class ="online" src="img/something28.jpg" alt="Someone"/>
+							<img class ="online" src="img/something28.jpg" alt="Someone"/>
 						</div>
 						</td>
 						<td class="tags">
@@ -323,8 +323,8 @@
 					<table> <tr>
 						<td class="participants">
 						<div>
-							<img class ="online" src="something28.jpg" alt="Someone"/>
-							<img class ="online" src="something28.jpg" alt="Someone"/>
+							<img class ="online" src="img/something28.jpg" alt="Someone"/>
+							<img class ="online" src="img/something28.jpg" alt="Someone"/>
 						</div>
 						</td>
 						<td class="tags">
@@ -345,12 +345,12 @@
 					<table> <tr>
 						<td class="participants">
 						<div>
-							<img class ="online" src="something28.jpg" alt="Someone"/>
-							<img class ="online" src="something28.jpg" alt="Someone"/>
-							<img class ="online" src="something28.jpg" alt="Someone"/>
-							<img class ="online" src="something28.jpg" alt="Someone"/>
-							<img class ="online" src="something28.jpg" alt="Someone"/>
-							<img class ="online" src="something28.jpg" alt="Someone"/>
+							<img class ="online" src="img/something28.jpg" alt="Someone"/>
+							<img class ="online" src="img/something28.jpg" alt="Someone"/>
+							<img class ="online" src="img/something28.jpg" alt="Someone"/>
+							<img class ="online" src="img/something28.jpg" alt="Someone"/>
+							<img class ="online" src="img/something28.jpg" alt="Someone"/>
+							<img class ="online" src="img/something28.jpg" alt="Someone"/>
 						</div>
 						</td>
 					</tr></table>
