--- a/gui/html/loginwindow.html
+++ b/gui/html/loginwindow.html
@@ -61,7 +61,7 @@
 				if (event.keyCode=='13') send();
 			}
 
-			$('#username').keypress(checkenter)
+			$('#username').focus().keypress(checkenter)
 			$('#password').keypress(checkenter)
 		</script>
 	</body>
