Code reorganization and GUI enhancements

--- a/gui/html/loginwindow.html
+++ b/gui/html/loginwindow.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
-		<script type="text/javascript" src="jquery-1.4.2.min.js"></script>
-		<script type="text/javascript" src="comm.js"></script>
+		<script type="text/javascript" src="jslib/jquery-1.4.2.min.js"></script>
+		<script type="text/javascript" src="jslib/comm.js"></script>
 		<script type="text/javascript">
 			function send() {
 				so = {'type':'logindata'};
