--- a/gui/html/wavelist.html
+++ b/gui/html/wavelist.html
@@ -6,6 +6,8 @@
 		<link rel="stylesheet" type="text/css" href="css/searchinput.css">
 		<link rel="stylesheet" type="text/css" href="css/toolbar.css">
 		<link rel="stylesheet" type="text/css" href="css/menu.css">
+		<link rel="stylesheet" type="text/css" href="css/contact.css">
+
 		<style type="text/css">
 			#mainlist {
 				margin:0px;
@@ -21,7 +23,7 @@
 			#mainlist li {
 				border: 1px solid #EEE;
 				border-top: none;
-				padding:2px 6px 5px 6px;
+				padding:2px 20px 5px 6px;
 				-webkit-user-drag: element;
 				-webkit-user-select: none;
 				-moz-user-select: -moz-all;
@@ -202,7 +204,7 @@
 				</tr></table>
 			</li>-->
 		</ul>
-		<div class="menu invisible">
+		<!--<div class="menu">
 		 <p>Items in nonselect toolbar:</p>
 		<ul>
 			<li>Inbox</li>
@@ -218,7 +220,7 @@
 			<li>Shove</li>
 			<li>Folderize</li>
 		</ul>
-		</div>
+		</div>-->
 		<div id="footer">
 		<div class="footerinner">
 			<div class="searches">
@@ -236,6 +238,8 @@
 		</div>
 
 	<script type="text/javascript" src="jslib/searchinput.js"></script>
+	<script type="text/javascript" src="jslib/button.js"></script>
+	<script type="text/javascript" src="jslib/contact.js"></script>
 	<script type="text/javascript">
 		function checkSelect() {
 			if ($('#mainlist li.selected').length >0){
@@ -252,8 +256,10 @@
 
 		function menuSlide(dir, fade) {
 			leftalter = ((dir=="left") ? "-=":"+=")+$(window).width();
+			rightalter = ((dir=="left") ? "+=":"-=")+$(window).width();
 			map = {};
 			map['left'] = leftalter;
+			map['right']= rightalter;
 			if (fade == "in") {
 				map['opacity'] = 1;
 			} else if (fade == "out") {
@@ -271,21 +277,25 @@
 			return $('<div class="menu"></div>').appendTo($('body'));
 		}
 
-		function newMenuLeft() {
+		function newMenuLeft(nofade) {
 			menu = newMenu();
-			menu.css({"left":-$(window).width(),"opacity":0});
+			menu.css({"left":-$(window).width(),"right":$(window).width()});
+			if (nofade!=true) menu.css("opacity",0);
 			return menu;
 		}
-		function newMenuRight() {
+		function newMenuRight(nofade) {
 			menu = newMenu();
-			menu.css({"left":$(window).width(),"opacity":0});
+			menu.css({"left":$(window).width(),"right":-$(window).width()});
+			if (nofade!=true) menu.css("opacity",0);
 			return menu;
 		}
 
 		function openMenu(html, level, exitcallback) {
+			fade = !($('.menu').length>0)
+			//console.log("fade = "+fade);
 			// if new menu is greater level, come from right, slide left
 			slideLeft = (level>menuLevel);
-			menu = slideLeft ? newMenuRight():newMenuLeft();
+			menu = slideLeft ? newMenuRight(!fade):newMenuLeft(!fade);
 			if (exitcallback==null){
 				exitcallback = function () {closeMenu()}
 			}
@@ -296,7 +306,7 @@
 			$('.menuexit').mouseup(function (){$(this).removeClass("down")})
 			$('.menuexit').mouseleave(function (){$(this).removeClass("over").removeClass("down")})
 			$('.menuexit').click(exitcallback)
-			menuSlide((slideLeft ? "left":"right"),"in");
+			menuSlide((slideLeft ? "left":"right"),(fade)?"in":"none");
 			menuLevel = level;
 		}
 
@@ -479,6 +489,16 @@
 			}
 			// alert(item)
 			return item;
+		}
+
+		function contactsList(contacts) {
+			//alert(JSON.stringify(contacts));
+			$('.toolbar li').removeClass('active');
+			$('.toolbar .gotoContacts').addClass('active');
+			$('#mainlist li').remove();
+			for (i in contacts) {				
+				$('<li></li>').append(renderContact(contacts[i])).appendTo('#mainlist');
+			}
 		}
 
 		function query() {
