Fixed: login autofill worked inconsistently

--- a/gui/html/loginwindow.html
+++ b/gui/html/loginwindow.html
@@ -63,6 +63,7 @@
 
 			$('#username').focus().keypress(checkenter)
 			$('#password').keypress(checkenter)
+			sendObject({'type':'ready'})
 		</script>
 	</body>
 </html>
