--- a/gui/html/wavelist.html
+++ b/gui/html/wavelist.html
@@ -401,18 +401,22 @@
 			if (options['tbshorten']=='autoshorten') {
 				// test to see if normal style is too long
 				$('.toolbar').removeClass('noicons').removeClass('nolabels');
-				toolbar.children(':not(.more)').removeClass('invisible').each(function(){
-					runningwidth += $(this).width()+20;
-					if (runningwidth > totalwidth || $(this).position().top > 58) {
-						$('.toolbar').addClass('nolabels');
+				tc = toolbar.children(':not(.more)');
+				last = toolbar.children(':not(.more):last');
+				tc.removeClass('invisible').removeClass('icononly').each(function(index){
+					// console.log(last.position().top);
+					t = $(tc[tc.length-index-1]); console.log(tc.length-index-1);
+					var wid = last.position().left+last.outerWidth();
+					if (wid > totalwidth || last.position().top > 58) {
+						t.addClass('icononly');
 					}
 				});
 				runningwidth=0;
 			}
 			toolbar.children(':not(.more)').removeClass('invisible').each(function(){
 				t = $(this);
-				runningwidth+=t.width()+20;
-				if (runningwidth > totalwidth || t.position().top > 58) {
+				runningwidth+=t.outerWidth();
+				if (runningwidth-4 > totalwidth || t.position().top > 58) {
 					hideTool(t);
 					showMore = true;
 				}
