Working Config storage for toolbar style

--- a/gui/html/wavelist.html
+++ b/gui/html/wavelist.html
@@ -238,6 +238,7 @@
 					adj_toolbar();
 					break;
 			}
+			if (oldvalue != value) sendObject({'type':'setOption','key':name,'value':value});
 		}
 
 		function pushOptions(opts) {
