--- a/gui/html/waveviewer.html
+++ b/gui/html/waveviewer.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="css/toolbar.css">
 		<link rel="stylesheet" type="text/css" href="css/menu.css">
 		<link rel="stylesheet" type="text/css" href="css/contact.css">
+		<link rel="stylesheet" type="text/css" href="css/tooltip.css">
 
 		<style type="text/css">
 			#footer .find  {
@@ -99,13 +100,19 @@
 			</table>
 			</div>
 		</div>
-		</div>
+	</div>
 
+	<div class='tooltip'>
+		<div class='contents'>Blah b</div>
+		<div class="target"></div>
+	</div>
+	<div class="scrollregion"><div class="scrollbar"></div><div class="clickable"></div></div>
 	<script type="text/javascript" src="jslib/searchinput.js"></script>
 	<script type="text/javascript" src="jslib/toolbar.js"></script>
 	<script type="text/javascript" src="jslib/button.js"></script>
 	<script type="text/javascript" src="jslib/contact.js"></script>
 	<script type="text/javascript" src="jslib/menu.js"></script>
+	<script type="text/javascript" src="jslib/scroll.js"></script>
 	<script type="text/javascript">
 		function checkSelect() {
 			if ($('#mainlist li.selected .contact').length >0){
