Scrollwheel now works on scrollable objects

--- a/gui/html/waveviewer.html
+++ b/gui/html/waveviewer.html
@@ -112,6 +112,7 @@
 	<script type="text/javascript" src="jslib/button.js"></script>
 	<script type="text/javascript" src="jslib/contact.js"></script>
 	<script type="text/javascript" src="jslib/menu.js"></script>
+	<script type="text/javascript" src="jslib/jquery.mousewheel.js"></script>
 	<script type="text/javascript" src="jslib/scroll.js"></script>
 	<script type="text/javascript">
 		function checkSelect() {
